@@ -1,3 +1,10 @@
+2004-06-29 Alain Magloire
+
+	When selecting threads gdb can reset the current
+	stack frame on us.  We should be aware of it and reset.
+
+	* cdi/org/eclipse/cdt/debug/mi/core/cdi/mode/Target.java
+
 2004-06-24 Alain Magloire
 
 	Fix 68226
